fix(aliyun): tolerate null collection rows
Signed-off-by: yuluo-yx <yuluo08290126@gmail.com>